# GD32E230

./: .clangd  .gitignore  CMakeLists.txt  CODE_GUIDE.md  README.md
GD32E23x_Firmware_Library_V2.5.0/Firmware/CMSIS/GD/GD32E23x/Include/: gd32e23x.h  system_gd32e23x.h
GD32E23x_Firmware_Library_V2.5.0/Firmware/CMSIS/GD/GD32E23x/Source/: system_gd32e23x.c
GD32E23x_Firmware_Library_V2.5.0/Firmware/CMSIS/GD/GD32E23x/Source/ARM/: startup_gd32e23x.s
GD32E23x_Firmware_Library_V2.5.0/Firmware/CMSIS/GD/GD32E23x/Source/GCC/: startup_gd32e23x.S
GD32E23x_Firmware_Library_V2.5.0/Firmware/CMSIS/GD/GD32E23x/Source/GCC/Ld/: gd32e225x8_flash.ld  gd32e225xB_flash.ld  gd32e230x4_flash.ld  gd32e230x6_flash.ld  gd32e230x8_flash.ld  gd32e231x8_flash.ld  gd32e235x8_flash.ld  gd32e235xB_flash.ld
GD32E23x_Firmware_Library_V2.5.0/Firmware/CMSIS/GD/GD32E23x/Source/GCC/newlib/: syscalls.c
GD32E23x_Firmware_Library_V2.5.0/Firmware/CMSIS/GD/GD32E23x/Source/IAR/: startup_gd32e23x.s
GD32E23x_Firmware_Library_V2.5.0/Firmware/GD32E23x_standard_peripheral/Include/: gd32e23x_adc.h  gd32e23x_cmp.h  gd32e23x_crc.h  gd32e23x_dbg.h  gd32e23x_dma.h  gd32e23x_exti.h  gd32e23x_fmc.h  gd32e23x_fwdgt.h  gd32e23x_gpio.h  gd32e23x_i2c.h  gd32e23x_misc.h  gd32e23x_pmu.h  gd32e23x_rcu.h  gd32e23x_rtc.h  gd32e23x_spi.h  gd32e23x_syscfg.h  gd32e23x_timer.h  gd32e23x_usart.h  gd32e23x_wwdgt.h
GD32E23x_Firmware_Library_V2.5.0/Firmware/GD32E23x_standard_peripheral/Source/: gd32e23x_adc.c  gd32e23x_cmp.c  gd32e23x_crc.c  gd32e23x_dbg.c  gd32e23x_dma.c  gd32e23x_exti.c  gd32e23x_fmc.c  gd32e23x_fwdgt.c  gd32e23x_gpio.c  gd32e23x_i2c.c  gd32e23x_misc.c  gd32e23x_pmu.c  gd32e23x_rcu.c  gd32e23x_rtc.c  gd32e23x_spi.c  gd32e23x_syscfg.c  gd32e23x_timer.c  gd32e23x_usart.c  gd32e23x_wwdgt.c
GD32E23x_Firmware_Library_V2.5.0/Utilities/: gd32e230c_eval.c  gd32e230c_eval.h
app/: gd32e23x_it.c  gd32e23x_it.h  gd32e23x_libopt.h  main.c  systick.c  systick.h
toolchain/: arm-none-eabi.cmake
